--- a/client/src/lib/translations/ta.json
+++ b/client/src/lib/translations/ta.json
@@ -1,134 +1,136 @@
 {
     "main": {
-        "title": "இலங்கை உதவி பதிவேடு",
-        "subtitle": "வெள்ளத்தால் பாதிக்கப்பட்ட மக்களுக்கு நிவாரணம்",
+        "title": "இலங்கை உதவிப் பதிவு",
+        "subtitle": "வெள்ளத்தால் பாதிக்கப்பட்ட சமூகங்களுக்கான நிவாரணம்",
         "helpCard": {
             "title": "உதவி தேவையா?",
-            "description": "உங்களுக்கு அல்லது உங்களுக்கு தெரிந்த ஒருவருக்கு உதவி தேவைப்பட்டால் கோரிக்கையிடுங்கள்"
+            "description": "உங்களுக்கோ அல்லது உங்களுக்குத் தெரிந்தவருக்கோ உதவி தேவைப்பட்டால் இங்கே கோருங்கள்"
         },
         "donationsCard": {
-            "title": "உதவி வழங்குங்கள்",
-            "description": "பேரிடரால் பாதிக்கப்பட்டவர்களுக்கு உதவி வழங்குங்கள்"
+            "title": "உதவி செய்யுங்கள்",
+            "description": "பாதிக்கப்பட்டவர்களுக்கு உதவி வழங்குங்கள்"
         },
         "locationsCard": {
-            "title": "சேகரிப்பு மையங்கள்",
-            "description": "நன்கொடைகளை வழங்கக்கூடிய அருகிலுள்ள மையங்களைக் கண்டறியவும்"
+            "title": "சேகரிப்பு நிலையங்கள்",
+            "description": "நன்கொடைகளை வழங்கக்கூடிய அருகிலுள்ள நிலையங்களைக் கண்டறியவும்"
         }
     },
     "helpRequests": {
         "title": "உதவி கோரிக்கைகள்",
-        "subtitle": "உங்களுக்கு அல்லது உங்களுக்கு தெரிந்த ஒருவருக்கு உதவி தேவைப்பட்டால் கோரிக்கையிடுங்கள்",
-        "noRequests": "தற்போது உதவி கோரிக்கைகள் எதுவும் இல்லை",
+        "subtitle": "உங்களுக்கோ அல்லது உங்களுக்குத் தெரிந்தவருக்கோ உதவி தேவைப்பட்டால் இங்கே கோருங்கள்",
+        "noRequests": "உதவி கோரிக்கைகள் எதுவும் இல்லை",
         "firstRequest": "முதல் கோரிக்கையைச் சேர்க்கவும்",
-        "loading": "தகவல்களை ஏற்றுகிறது...",
+        "loading": "தகவல் ஏற்றப்படுகிறது...",
         "status": {
             "pending": "உதவி தேவை",
             "fulfilled": "தீர்க்கப்பட்டது"
         },
         "card": {
             "address": "முகவரி",
-            "helpNeeded": "தேவையான உதவி",
+            "helpNeeded": "தேவைப்படும் உதவி",
             "additionalDetails": "கூடுதல் விவரங்கள்",
-            "contactInfo": "தொடர்பு கொள்ளவும்",
-            "requestedOn": "கோரப்பட்ட தேதி"
+            "contactInfo": "தொடர்பு",
+            "requestedOn": "கோரப்பட்டது"
         },
         "form": {
             "title": "உதவி கோரிக்கையைச் சேர்க்கவும்",
-            "description": "உங்களுக்கு அல்லது உங்களுக்கு தெரிந்த ஒருவருக்கு தேவையான உதவி பற்றிய தகவல்களை வழங்கவும்",
+            "description": "உங்களுக்கோ அல்லது உங்களுக்குத் தெரிந்தவருக்கோ தேவைப்படும் உதவி பற்றிய தகவலை வழங்கவும்",
             "name": "பெயர்",
-            "namePlaceholder": "உங்கள் பெயர்",
+            "namePlaceholder": "உங்கள் முழு பெயர்",
             "district": "மாவட்டம்",
-            "districtPlaceholder": "தேர்ந்தெடுக்கவும்",
+            "districtPlaceholder": "தெரிவு செய்க",
             "address": "முகவரி",
             "addressPlaceholder": "முழு முகவரி",
             "phone": "தொலைபேசி எண்",
             "phonePlaceholder": "07x xxxxxxx",
-            "additionalPhone": "கூடுதல் தொலைபேசி (விரும்பினால்)",
-            "helpDescription": "தேவையான உதவி",
-            "helpDescriptionPlaceholder": "எ.கா: உணவு, குடிநீர், மருந்துகள்",
-            "additionalDetails": "கூடுதல் விவரங்கள் (விரும்பினால்)",
-            "additionalDetailsPlaceholder": "கூடுதல் தகவல்கள்"
+            "additionalPhone": "கூடுதல் தொலைபேசி (விருப்பம்)",
+            "helpDescription": "தேவைப்படும் உதவி",
+            "helpDescriptionPlaceholder": "எ.கா: உணவு, குடிநீர், மருந்து",
+            "additionalDetails": "கூடுதல் விவரங்கள் (விருப்பம்)",
+            "additionalDetailsPlaceholder": "கூடுதல் தகவல்",
+            "note": "குறிப்பு: உங்கள் தொடர்பு விவரங்கள் நன்கொடையாளர்களுக்குக் காட்டப்படும்."
         }
     },
     "donations": {
         "title": "நன்கொடைகள்",
-        "subtitle": "வெள்ளத்தால் பாதிக்கப்பட்ட மக்களுக்கு நிவாரணம்",
-        "instructions": "இந்த பொருட்கள் உங்களுக்கு தேவைப்பட்டால், நன்கொடையாளரின் தொலைபேசி எண்ணுக்கு அழைக்கவும்",
-        "noDonations": "தற்போது நன்கொடைகள் எதுவும் இல்லை",
-        "loading": "தகவல்களை ஏற்றுகிறது...",
+        "subtitle": "வெள்ளத்தால் பாதிக்கப்பட்ட சமூகங்களுக்கான நிவாரணம்",
+        "instructions": "உங்களுக்கு இந்தப் பொருட்கள் தேவைப்பட்டால், நன்கொடையாளரின் தொலைபேசி எண்ணை அழைக்கவும்",
+        "noDonations": "நன்கொடைகள் எதுவும் இல்லை",
+        "loading": "தகவல் ஏற்றப்படுகிறது...",
         "status": {
-            "available": "கிடைக்கிறது",
+            "available": "கிடைக்கக்கூடியது",
             "collected": "சேகரிக்கப்பட்டது"
         },
         "card": {
             "label": "கிடைக்கக்கூடிய நன்கொடை",
             "badge": "நன்கொடை",
+            "collected": "சேகரிக்கப்பட்டது",
             "address": "முகவரி",
             "description": "விளக்கம்",
             "donor": "நன்கொடையாளர்",
-            "donatedOn": "நன்கொடை அளித்த தேதி",
+            "donatedOn": "நன்கொடை அளிக்கப்பட்டது",
             "collectButton": "சேகரிக்கவும்"
         },
         "form": {
             "title": "நன்கொடையைச் சேர்க்கவும்",
-            "description": "நீங்கள் நன்கொடையாக வழங்கக்கூடிய பொருட்கள் பற்றிய தகவல்களை வழங்கவும்",
+            "description": "நீங்கள் வழங்கக்கூடிய பொருட்கள் பற்றிய தகவலை வழங்கவும்",
             "name": "பெயர்",
             "namePlaceholder": "உங்கள் பெயர்",
             "district": "மாவட்டம்",
-            "districtPlaceholder": "தேர்ந்தெடுக்கவும்",
+            "districtPlaceholder": "தெரிவு செய்க",
             "address": "முகவரி",
-            "addressPlaceholder": "நன்கொடைகளைப் பெறக்கூடிய இடம்",
+            "addressPlaceholder": "நன்கொடைகளைச் சேகரிக்கக்கூடிய இடம்",
             "phone": "தொலைபேசி எண்",
             "phonePlaceholder": "07x xxxxxxx",
             "items": "நன்கொடை பொருட்கள்",
-            "itemsPlaceholder": "எ.கா: அரிசி, பால்பொடி, தண்ணீர்",
-            "description": "விளக்கம் (விரும்பினால்)",
-            "descriptionPlaceholder": "பொருட்கள் பற்றிய கூடுதல் தகவல்கள்"
+            "itemsPlaceholder": "எ.கா: அரிசி, பால் மா, தண்ணீர்",
+            "description": "விளக்கம் (விருப்பம்)",
+            "descriptionPlaceholder": "பொருட்கள் பற்றிய கூடுதல் தகவல்"
         }
     },
     "locations": {
-        "title": "உதவி சேகரிப்பு மையங்கள்",
-        "subtitle": "நன்கொடைகளை வழங்கக்கூடிய சேகரிப்பு மையங்கள்",
-        "noLocations": "தற்போது இடங்கள் எதுவும் இல்லை",
-        "loading": "தகவல்களை ஏற்றுகிறது...",
+        "title": "உதவி சேகரிப்பு நிலையங்கள்",
+        "subtitle": "நன்கொடைகளை வழங்கக்கூடிய சேகரிப்பு நிலையங்கள்",
+        "noLocations": "இடங்கள் எதுவும் இல்லை",
+        "loading": "தகவல் ஏற்றப்படுகிறது...",
         "card": {
             "address": "முகவரி",
             "time": "நேரம்",
             "description": "விளக்கம்",
-            "viewPhotos": "சேகரிப்பு மைய புகைப்படங்களைப் பார்க்கவும்",
-            "collectorInfo": "சேகரிப்பாளர் தகவல் (பாதுகாப்பாக தொடர்பு கொள்ளவும்)",
-            "addedOn": "இடம் சேர்க்கப்பட்ட தேதி"
+            "viewPhotos": "புகைப்படங்களைப் பார்க்கவும்",
+            "collectorInfo": "சேகரிப்பாளர் தகவல் (பாதுகாப்பாகத் தொடர்பு கொள்ளவும்)",
+            "addedOn": "இடம் சேர்க்கப்பட்டது"
         },
         "form": {
-            "title": "சேகரிப்பு மையத்தைச் சேர்க்கவும்",
-            "description": "நன்கொடைகளை வழங்கக்கூடிய சேகரிப்பு மையம் பற்றிய விவரங்களைச் சேர்க்கவும்",
-            "name": "இட பெயர்",
+            "title": "சேகரிப்பு நிலையத்தைச் சேர்க்கவும்",
+            "description": "நன்கொடைகளை வழங்கக்கூடிய இடம் பற்றிய விவரங்களைச் சேர்க்கவும்",
+            "name": "இடத்தின் பெயர்",
             "namePlaceholder": "எ.கா: கொழும்பு நிவாரண மையம்",
             "district": "மாவட்டம்",
-            "districtPlaceholder": "தேர்ந்தெடுக்கவும்",
+            "districtPlaceholder": "தெரிவு செய்க",
             "address": "முகவரி",
             "addressPlaceholder": "முழு முகவரி",
-            "startDate": "தொடக்க தேதி",
+            "startDate": "ஆரம்ப தேதி",
             "endDate": "முடிவு தேதி",
-            "startTime": "தொடக்க நேரம்",
+            "startTime": "ஆரம்ப நேரம்",
             "endTime": "முடிவு நேரம்",
             "contactSection": "தொடர்பு விவரங்கள்",
             "contactName": "தொடர்பு நபர் பெயர்",
             "contactNamePlaceholder": "பெயர்",
             "contactPhone": "தொலைபேசி எண்",
             "contactPhonePlaceholder": "07x xxxxxxx",
-            "additionalPhone": "கூடுதல் தொலைபேசி (விரும்பினால்)",
+            "additionalPhone": "கூடுதல் தொலைபேசி (விருப்பம்)",
             "description": "விளக்கம்",
-            "descriptionPlaceholder": "இந்த இடத்தில் சேகரிக்கப்படும் பொருட்களைக் குறிப்பிடவும் (எ.கா: உணவு, உடைகள், மருந்துகள்)",
-            "contactImage": "தொடர்பு நபர் புகைப்படம் (அவசியம்)",
-            "contactImageNote": "இந்த புகைப்படம் அட்டையில் காட்டப்படும்",
-            "locationImages": "சேகரிப்பு மைய புகைப்படங்கள் (குறைந்தது 1 - அதிகபட்சம் 5)"
+            "descriptionPlaceholder": "சேகரிக்கப்படும் பொருட்கள் (எ.கா: உணவு, உடை, மருந்து)",
+            "contactImage": "தொடர்பு நபர் புகைப்படம் (கட்டாயம்)",
+            "contactImageNote": "இந்தப் புகைப்படம் அட்டையில் காட்டப்படும்",
+            "locationImages": "புகைப்படங்கள் (குறைந்தது 1 - அதிகபட்சம் 5)"
         }
     },
     "common": {
-        "back": "பின்செல்",
+        "back": "பின்செல்க",
         "submit": "சமர்ப்பிக்கவும்",
-        "cancel": "ரத்து செய்",
+        "cancel": "ரத்துசெய்",
         "add": "சேர்க்கவும்",
         "edit": "திருத்தவும்",
         "delete": "நீக்கவும்",
@@ -139,11 +141,22 @@
         "page": "பக்கம்",
         "previous": "முந்தைய",
         "next": "அடுத்த",
-        "loading": "ஏற்றுகிறது...",
+        "loading": "ஏற்றப்படுகிறது...",
         "error": "பிழை ஏற்பட்டது",
         "success": "வெற்றி",
         "close": "மூடவும்",
-        "select": "தேர்ந்தெடுக்கவும்"
+        "select": "தெரிவு செய்க",
+        "note": "குறிப்பு",
+        "dateLocale": "ta-LK",
+        "validation": {
+            "required": "இப்புலம் கட்டாயமானது",
+            "nameRequired": "பெயர் கட்டாயமானது",
+            "phoneRequired": "தொலைபேசி எண் கட்டாயமானது",
+            "districtRequired": "மாவட்டம் தெரிவு செய்வது கட்டாயமானது",
+            "addressRequired": "முகவரி கட்டாயமானது",
+            "helpDescriptionRequired": "உதவி பெற, விவரங்களைச் சரியாகச் சேர்க்கவும்",
+            "itemsRequired": "பொருட்கள் கட்டாயமானது"
+        }
     },
     "districts": {
         "all": "அனைத்தும்",
@@ -155,9 +168,9 @@
         "nuwara_eliya": "நுவரெலியா",
         "galle": "காலி",
         "matara": "மாத்தறை",
-        "hambantota": "அம்பாந்தோட்டை",
+        "hambantota": "ஹம்பாந்தோட்டை",
         "jaffna": "யாழ்ப்பாணம்",
-        "kilinochchi": "கிளினொச்சி",
+        "kilinochchi": "கிளிநொச்சி",
         "mannar": "மன்னார்",
         "vavuniya": "வவுனியா",
         "mullaitivu": "முல்லைத்தீவு",
